
2018-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_build_move_literal): fixed bug #486, where literals moved
	  to an ANY LENGTH item where truncated to one character.
	* typeck.c (validate_move): fixed spurious "value exceeds data size"
	  warning for ANY LENGTH items.

2017-12-31  Ron Norman <rjn@inglenet.com>

	* codegen.c, tree.c: fix bug #471 Mark report fields as being
	  referenced so that the cob_field is always emitted

2017-12-26  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.h, config.c, field.c: added more lax "gc" option to
	  screen-section-rules.

2017-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, codegen.c, parser.y, scanner.l, tree.h, tree.c: renamed
	  CB_PROGRAM_TYPE to COB_MODULE_TYPE_PROGRAM and CB_FUNCTION_TYPE to
	  COB_MODULE_TYPE_FUNCTION and moved definition to libcob/common.h
	* codegen.c (output_module_init): deactivated generation of currently
	  unused module_returning

2017-12-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (file_status_clause): FR #51 added parsing for
	  secondary VSAM status, unconformable to any other than IBM/MVS
	  where it is ignored (with a warning with -Wall)
	* config.c, cobc.h: parse standard-define, checking for valid entry
	  and actually setting it again

2017-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, config.c, field.c: added screen-section-rules option to
	  set rules for SCREEN SECTION item clauses.
	* field.c: removed "alphanumeric value is expected" warning when using
	  numeric VALUEs in the SCREEN SECTION.

2017-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h, parser.y (begin_implicit_statement), codegen.c (output_stmt):
	  fixed duplicated trace code generation for implicit statements

2017-12-22  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_attr): set flag COB_FLAG_IS_FP for all FLOAT types

2017-12-21  Ron Norman <rjn@inglenet.com>
